span and overflow fix

--- a/css/nav.css
+++ b/css/nav.css
@@ -55,9 +55,8 @@ li a:hover {
 
 @media (max-width: 1010px) {
 
-  html,
-  body {
-    position: relative;
+  body,
+  .container {
     overflow-x: hidden;
   }
 
@@ -130,9 +129,9 @@ li a:hover {
 
 @media(max-width: 400px) {
 
-  html,
-  body {
-    position: relative;
+  body,
+  .container {
+
     overflow-x: hidden;
   }
 
